pipeline/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: openaichat-ui
  name: el-openaichat-ui
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-openaichat-ui
    weight: 100
