pipeline/generated-el-event-listenerroute.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-event-listener-openai
  namespace: intelligentapp
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener:  event-listener-openai
spec:
  to:
    kind: Service
    name: el-event-listener-openai
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
